added 3rd project to portfolio

--- a/portfolio.css
+++ b/portfolio.css
@@ -29,3 +29,14 @@ body{
   font-size: 16px;
   } 
 
+p{
+  margin: 0 30% 20px 0;
+  border-style:solid;
+  border-width: 1px;
+  border-radius: 5px;
+  padding: 7px;
+  background-color: #E0FFFF;
+  font-size: 14px;
+  font-family: Helvetica, serif;
+}
+
