--- a/portfolio.css
+++ b/portfolio.css
@@ -27,7 +27,10 @@ body{
   color: white; 
   background-color: #000; 
   font-size: 16px;
-  } 
+  }
+.navigation_bar ul li a:hover{
+  color: #DA70D6;
+} 
 
 p{
   margin: 0 30% 20px 0;
