--- a/portfolio.css
+++ b/portfolio.css
@@ -70,3 +70,23 @@ a[title]:hover:after {
   background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
   background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
 }
+@media (max-width: 600px) {
+  .navigation_bar li {
+    margin: 30px 5px;
+  }
+  .navigation_bar ul li a{
+    padding: .2em 0.5em; 
+  }
+}
+
+@media (max-width: 860px) {
+  p{
+    width: 60%;
+  }
+}
+
+@media (max-width: 660px) {
+  p{
+    width: 50%;
+  }
+}
