--- a/css/cat.css
+++ b/css/cat.css
@@ -1,8 +1,8 @@
-#cat{
+/*#cat{
   display: block;
   width: 100%;
   height: auto;
-}
+}*/
 @-webkit-keyframes rotate {
   0% {
     transform: rotate(-0.08turn);
