--- a/portfolio.css
+++ b/portfolio.css
@@ -7,25 +7,28 @@ body{
   -o-background-size: cover;
   background-size: cover;*/
 }
-
+.navigation_bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+}
 .navigation_bar ul{
   list-style-type:none;
   margin:0;
-  padding:20px;
-  text-align: center;
-  background-color: black;
-}
-
-.navigation_bar li{
-  display: inline;
-  margin: 30px;
+  background-color: #3A0256;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  height: 50px;
+  align-items: center;
 }
 
 .navigation_bar ul li a { 
   text-decoration: none; 
   padding: .2em 1em; 
   color: white; 
-  background-color: #000; 
+  font: bold 15px sans-serif;
   font-size: 16px;
   }
 .navigation_bar ul li a:hover{
