--- a/portfolio.css
+++ b/portfolio.css
@@ -1,11 +1,13 @@
 body{
-  background-image: url('files/ushwf-background.jpg');
+  /* background-image: url('files/ushwf-background.jpg');
   background-repeat: no-repeat;
-  background-size: 100% 180%;
+  background-size: 100% 180%; */
 /*  -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;*/
+  display: flex;
+  min-height: 100vh;
 }
 .navigation_bar {
   position: fixed;
@@ -20,7 +22,7 @@ body{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  height: 50px;
+  height: 80px;
   align-items: center;
 }
 
@@ -73,14 +75,6 @@ a[title]:hover:after {
   background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
   background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
 }
-@media (max-width: 600px) {
-  .navigation_bar li {
-    margin: 30px 5px;
-  }
-  .navigation_bar ul li a{
-    padding: .2em 0.5em; 
-  }
-}
 
 @media (max-width: 860px) {
   p{
@@ -112,4 +106,23 @@ a[title]:hover:after {
 .portfolio figure:hover img {
   -webkit-transform: scale(1.3);
   transform: scale(1.3);
+}
+.heart {
+  position: fixed;
+  top: -1vh;
+  font-size:l 4rem;
+  transform: translateY(0);
+  animation: fall 1s linear forwards;
+}
+
+@keyframes fall {
+  to {
+    transform: translateY(105vh);
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .navigation_bar ul{
+    height: 50px;
+  }
 }
