--- a/portfolio.css
+++ b/portfolio.css
@@ -1,13 +1,14 @@
 body{
-  /* background-image: url('files/ushwf-background.jpg');
-  background-repeat: no-repeat;
-  background-size: 100% 180%; */
-/*  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;*/
   display: flex;
-  min-height: 100vh;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  background-color: rgba(205, 209, 228, 0.9);
+}
+.portfolio h1 {
+  margin-top: 83px;
 }
 .navigation_bar {
   position: fixed;
@@ -24,6 +25,7 @@ body{
   justify-content: space-evenly;
   height: 80px;
   align-items: center;
+  padding: 0;
 }
 
 .navigation_bar ul li a { 
@@ -37,15 +39,17 @@ body{
   color: #DA70D6;
 } 
 
-p{
-  margin: 0 54% 20px 0;
+.oneProject p{
+  width: 75%;
   border-style:solid;
-  border-width: 1px;
+  border: 1px solid #ccc;
   border-radius: 5px;
-  padding: 7px;
+  padding: 20px;
+  line-height: 1.3;
   background-color: #E0FFFF;
   font-size: 14px;
   font-family: Helvetica, serif;
+  box-shadow: 3px 5px 10px rgb(0 0 0 / 30%);
 }
 
 a:hover{
@@ -88,15 +92,18 @@ a[title]:hover:after {
   }
 }
 
+.portfolio .oneProject {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: auto;
+  margin-bottom: 20px;
+}
 .portfolio ol li img {
   width: 150px;
   height: 96px;
-  float: right; 
-  margin:0 70px 0 20px;
-  margin-right: 6%;
+  margin-top: 23px;
+  box-shadow: 3px 5px 10px rgb(0 0 0 / 30%);
 }
-
-
 .portfolio figure img{
   -webkit-transform: scale(1);
   transform: scale(1);
@@ -124,5 +131,8 @@ a[title]:hover:after {
 @media only screen and (min-width: 768px) {
   .navigation_bar ul{
     height: 50px;
+  }
+  .portfolio ol li img {
+    margin-top: 15px;
   }
 }
